--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/SideMenu.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/SideMenu.html
@@ -19,9 +19,9 @@
             <ion-item menu-close href="#/matches/todaymatches" class="item-royal ">
                 <div class="">
                     <i>
-                        <img  src="../img/Icons/MenuIcon1.png" />
+                        <img class="vertical-middle"  src="../img/Icons/MenuIcon1.png" />
                     </i>
-                    <span >
+                    <span class="vertical-middle">
                         ตารางแข่งขัน
                     </span>
                 </div>          
@@ -29,9 +29,9 @@
             <ion-item menu-close href="#" class="item-royal">
                 <div class="">
                     <i >
-                        <img src="../img/Icons/MenuIcon2.png" />
+                        <img class="vertical-middle" src="../img/Icons/MenuIcon2.png" />
                     </i>
-                    <span>
+                    <span class="vertical-middle">
                         ทีมและลีค
                     </span>
                 </div>     
@@ -39,9 +39,9 @@
             <ion-item menu-close href="#/history/historybymonth" class="item-royal">
                 <div class="">
                     <i >
-                        <img src="../img/Icons/MenuIcon3.png" />
+                        <img class="vertical-middle" src="../img/Icons/MenuIcon3.png" />
                     </i>
-                    <span >
+                    <span class="vertical-middle" >
                         สถิติการทายผล
                     </span>
                 </div>
@@ -49,9 +49,9 @@
             <ion-item menu-close ng-click="login()" class="item-royal">
                 <div class="">
                     <i >
-                        <img src="../img/Icons/MenuIcon4.png" />
+                        <img class="vertical-middle" src="../img/Icons/MenuIcon4.png" />
                     </i>
-                    <span>
+                    <span class="vertical-middle">
                         ตั้งค่า
                     </span>
                 </div>
@@ -60,22 +60,25 @@
             <ion-item menu-close href="#" class="item-royal">
                 <div class="">
                     <i class="">
-                        <img src="../img/Icons/MenuIcon5.png" />
+                        <img class="vertical-middle" src="../img/Icons/MenuIcon5.png" />
                     </i>
-                    <span>
+                    <span class="vertical-middle">
                         ออกจากระบบ
                     </span>
                 </div>                
             </ion-item>
             <a class="button button-block bg-gray " href="#">เข้าสู่ระบบ</a>
-            <a class="button button-block button-balanced ">
-                <div class="padding">
-                    <h2 >
-                        <img height="40" src="../img/Icons/Playgame.png" />
-                        เล่นเกมส์
-                    </h2>
-                </div>             
-            </a>
+            <div class="space-top">
+                <a class="button button-block button-balanced ">
+                    <div class="padding">
+                        <h2 class="text-white">
+                            <img height="40" src="../img/Icons/Playgame.png" />
+                            เล่นเกมส์
+                        </h2>
+                    </div>
+                </a>
+            </div>
+
         </ion-list>
     </ion-content>
 </ion-side-menu>
