- Resolved keyboard error - Edit image path
Signed-off-by: Kritsada Dechawantana <kritsada@perfenterprise.com>

--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Matches/_matchHeader.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Matches/_matchHeader.html
@@ -1,10 +1,10 @@
 ﻿<div>
-    <img class="col no-padding" src="../../img/Logos/Banner.png" />
+    <img class="col no-padding" src="img/Logos/Banner.png" />
     <div class="padding">
         <a menu-close href="#/rewards/rewards" class="button-small button bg-yellow row">
             <div class="col col-10 col-center">
                 <i>
-                    <img src="../img/Icons/Star.png" height="25" />
+                    <img src="img/Icons/Star.png" height="25" />
                 </i>
             </div>
             <span class="col col-center text-left font-large">
