--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/_rewardTemplate.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/_rewardTemplate.html
@@ -40,7 +40,7 @@
                 <!-- Tab 2 content -->
                 <ion-view>
                     <ion-content>
-                        <div ng-include src="'/templates/Matches/_matchHeader.html'"></div>
+                        <div ng-include src="'templates/Matches/_matchHeader.html'"></div>
                         <h1>
                             Tab 2
                         </h1>
@@ -52,7 +52,7 @@
                 <!-- Tab 3 content -->
                 <ion-view>
                     <ion-content>
-                        <div ng-include src="'/templates/Matches/_matchHeader.html'"></div>
+                        <div ng-include src="'templates/Matches/_matchHeader.html'"></div>
                         <h1>
                             Tab 3
                         </h1>
@@ -61,5 +61,5 @@
             </ion-tab>
         </ion-tabs>
     </ion-side-menu-content>
-    <div ng-include src="'/templates/SideMenu.html'"></div>
+    <div ng-include src="'templates/SideMenu.html'"></div>
 </ion-side-menus>
