--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Accounts/Login.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Accounts/Login.html
@@ -1,7 +1,7 @@
 ﻿<ion-view class="bg-main">
     <ion-content class="text-center">
         <div class="space-top">
-            <img class="col-67" src="../../img/Logos/LogoLogin.png" />
+            <img class="col-67" src="img/Logos/LogoLogin.png" />
         </div>
         <br />
 
