--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/SideMenu.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/SideMenu.html
@@ -2,7 +2,7 @@
     <ion-header-bar class="bar-dark row">
         <div class="col col-10 col-center">
             <i>
-                <img src="../img/Icons/StarWhite.png" height="20" />
+                <img src="img/Icons/StarWhite.png" height="20" />
             </i>
         </div>
         <div class="col col-center">
@@ -19,7 +19,7 @@
             <ion-item menu-close href="#/matches/todaymatches" class="item-royal ">
                 <div class="">
                     <i>
-                        <img class="vertical-middle"  src="../img/Icons/MenuIcon1.png" />
+                        <img class="vertical-middle"  src="img/Icons/MenuIcon1.png" />
                     </i>
                     <span class="vertical-middle">
                         ตารางแข่งขัน
@@ -29,7 +29,7 @@
             <ion-item menu-close href="#" class="item-royal">
                 <div class="">
                     <i >
-                        <img class="vertical-middle" src="../img/Icons/MenuIcon2.png" />
+                        <img class="vertical-middle" src="img/Icons/MenuIcon2.png" />
                     </i>
                     <span class="vertical-middle">
                         ทีมและลีค
@@ -39,7 +39,7 @@
             <ion-item menu-close href="#/history/historybymonth" class="item-royal">
                 <div class="">
                     <i >
-                        <img class="vertical-middle" src="../img/Icons/MenuIcon3.png" />
+                        <img class="vertical-middle" src="img/Icons/MenuIcon3.png" />
                     </i>
                     <span class="vertical-middle" >
                         สถิติการทายผล
@@ -49,7 +49,7 @@
             <ion-item menu-close ng-click="login()" class="item-royal">
                 <div class="">
                     <i >
-                        <img class="vertical-middle" src="../img/Icons/MenuIcon4.png" />
+                        <img class="vertical-middle" src="img/Icons/MenuIcon4.png" />
                     </i>
                     <span class="vertical-middle">
                         ตั้งค่า
@@ -60,7 +60,7 @@
             <ion-item menu-close href="#" class="item-royal">
                 <div class="">
                     <i class="">
-                        <img class="vertical-middle" src="../img/Icons/MenuIcon5.png" />
+                        <img class="vertical-middle" src="img/Icons/MenuIcon5.png" />
                     </i>
                     <span class="vertical-middle">
                         ออกจากระบบ
@@ -72,7 +72,7 @@
                 <a class="button button-block button-balanced ">
                     <div class="padding">
                         <h2 class="text-white">
-                            <img height="40" src="../img/Icons/Playgame.png" />
+                            <img height="40" src="img/Icons/Playgame.png" />
                             เล่นเกมส์
                         </h2>
                     </div>
