--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/_matchTemplate.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/_matchTemplate.html
@@ -3,7 +3,7 @@
         <ion-nav-bar class="bar-balanced">
             <ion-nav-buttons side="left">
                 <div class="button button-icon">
-                    <img width="35" height="35" src="../img/Icons/Trophy.png" />
+                    <img width="35" height="35" src="img/Icons/Trophy.png" />
                     <div class="soccer-number">4
                     </div>
                 </div>       
@@ -23,7 +23,7 @@
                 <!-- Tab 2 content -->
                 <ion-view view-title="Welcome">
                     <ion-content>
-                        <div ng-include src="'/templates/Matches/_matchHeader.html'"></div>
+                        <div ng-include src="'templates/Matches/_matchHeader.html'"></div>
                         <h1>
                             Tab 2
                         </h1>
@@ -36,7 +36,7 @@
                 <!-- Tab 3 content -->
                 <ion-view view-title="Welcome">
                     <ion-content>
-                        <div ng-include src="'/templates/Matches/_matchHeader.html'"></div>
+                        <div ng-include src="'templates/Matches/_matchHeader.html'"></div>
                         <h1>
                             Tab 3
                         </h1>
@@ -47,7 +47,7 @@
                 <!-- Tab 3 content -->
                 <ion-view view-title="Welcome">
                     <ion-content>
-                        <div ng-include src="'/templates/Matches/_matchHeader.html'"></div>
+                        <div ng-include src="'templates/Matches/_matchHeader.html'"></div>
                         <h1>
                             Tab 4
                         </h1>
@@ -58,7 +58,7 @@
                 <!-- Tab 3 content -->
                 <ion-view view-title="Welcome">
                     <ion-content>
-                        <div ng-include src="'/templates/Matches/_matchHeader.html'"></div>
+                        <div ng-include src="'templates/Matches/_matchHeader.html'"></div>
                         <h1>
                             Tab 5
                         </h1>
@@ -68,5 +68,5 @@
         </ion-tabs>
     </ion-side-menu-content>
 
-    <div ng-include src="'/templates/SideMenu.html'"></div>
+    <div ng-include src="'templates/SideMenu.html'"></div>
 </ion-side-menus>
