--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/_rewardTemplate.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/_rewardTemplate.html
@@ -1,37 +1,13 @@
 ﻿<ion-side-menus enable-menu-with-back-views="false">
     <ion-side-menu-content>
-        <ion-nav-bar class="bar-balanced">
+        <ion-nav-bar class="bar-balanced" align-title="center">
             <ion-nav-back-button>
             </ion-nav-back-button>
             <ion-nav-buttons side="right">
                 <button class="button button-icon ion-navicon" menu-toggle="right"></button>
             </ion-nav-buttons>
         </ion-nav-bar>
-
-
-        <!--<ion-nav-bar class="bar-stable">
-            <ion-nav-back-button>
-            </ion-nav-back-button>
-            <ion-nav-buttons side="right">
-                <button class="button button-icon button-clear ion-navicon" menu-toggle="right"></button>
-            </ion-nav-buttons>
-            <div class="tabs-striped tabs-top tabs-background-positive">
-                <div class="tabs">
-                    <a class="tab-item active" href="#">
-                        ของรางวัล
-                    </a>
-                    <a class="tab-item" href="#">
-                        รายชื่อผู้โชคดี
-                    </a>
-                    <a class="tab-item" href="#">
-                        ติดต่อรับของ
-                    </a>
-                </div>
-            </div>
-        </ion-nav-bar>-->
-        <!--<ion-nav-view name="MainContent"></ion-nav-view>-->
-
-        <ion-tabs class="tabs-stable tabs-top bg-gray text-dark">
+        <ion-tabs class="tabs-stable tabs-top text-dark">
             <ion-tab title="ของรางวัล" class="text-dark">
                 <!-- Tab 1 content -->
                 <ion-nav-view name="MainContent"></ion-nav-view>
