--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/_basicTemplate.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/_basicTemplate.html
@@ -11,5 +11,5 @@
         <ion-nav-view name="MainContent"></ion-nav-view>
     </ion-side-menu-content>
 
-    <div ng-include src="'/templates/SideMenu.html'"></div>
+    <div ng-include src="'templates/SideMenu.html'"></div>
 </ion-side-menus>
