--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/_matchTemplate.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/_matchTemplate.html
@@ -1,6 +1,6 @@
 ﻿<ion-side-menus enable-menu-with-back-views="false">
     <ion-side-menu-content>
-        <ion-nav-bar class="bar-balanced">
+        <ion-nav-bar class="bar-balanced" align-title="center">
             <ion-nav-buttons side="left">
                 <div class="button button-icon">
                     <img width="35" height="35" src="img/Icons/Trophy.png" />
